--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -1,63 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- ENLACE DE SALTO -->
-  <a href="#inicio" class="skip-link" role="link" aria-label="Saltar al contenido principal">Saltar al contenido principal</a>
+  <a href="#inicio" class="skip-link" role="link" aria-label="Saltar al contenido principal">Saltar al contenido
+    principal</a>
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="author" content="Iker Fortes" >
-    <meta
-      name="description"
-      content="VendemosTuCoche - Compra y venta de vehículos de forma rápida, segura y transparente."
-    >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Iker Fortes">
+    <meta name="description"
+      content="VendemosTuCoche - Compra y venta de vehículos de forma rápida, segura y transparente.">
+
     <!-- Estilos e impresión -->
     <title>VendemosTuCoche - Mantenimiento</title>
+
+    <!-- Bootstrap 5.3 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="icon" href="./images/empresa/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/main.css" >
-    <link rel="stylesheet" href="css/secciones/index.css" >
-    <link rel="stylesheet" href="css/secciones/mantenimiento.css" >
-    <link rel="stylesheet" href="css/print.css" media="print" >
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/secciones/index.css">
+    <link rel="stylesheet" href="css/secciones/mantenimiento.css">
+    <link rel="stylesheet" href="css/print.css" media="print">
   </head>
 
   <body>
 
-    <header role="banner" aria-label="Cabecera del sitio">
-      <a href="condiciones" title="condiciones" aria-label="Ir a condiciones">
-        <div id="contenedor-logo">
-          <img
-            src="./images/empresa/logo.png" alt="Logo_empresa" width="100" id="logo" role="img" aria-label="Logotipo de VendemosTuCoche">
-        </div>
-      </a>
 
-      <!-- Checkbox + label para menú móvil (checkbox-hack) -->
-      <input
-        type="checkbox"
-        id="menu-toggle"
-        aria-controls="menu-principal"
-        aria-expanded="false"
-        aria-label="Mostrar u ocultar menú de navegación"
-      >
-      <label for="menu-toggle" class="hamburger" role="button" aria-controls="menu-principal" aria-label="Botón abrir/cerrar menú de navegación" tabindex="0">
-        <span class="sr-only">Abrir menú de navegación</span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
+    <header role="banner" class="navbar navbar-expand-lg fixed-top shadow-sm p-0">
+      <div class="container-fluid px-4 h-100">
 
-      <nav id="menu-principal" class="menu-principal" role="navigation" aria-label="Menú principal" aria-hidden="true">
-        <ul role="list">
-          <li role="listitem"><a href="./index.html" class="link">INICIO</a></li>
-          <li role="listitem"><a href="./servicios.html" class="link">SERVICIOS</a></li>
-          <li role="listitem"><a href="#" class="link">OPINIONES</a></li>
-          <li role="listitem"><a href="./contacto.html" class="link">CONTACTO</a></li>
-        </ul>
-      </nav>
-      <div id="usuario" role="navigation" aria-label="Área de usuario" aria-live="polite">
-        <a href="./login.html" class="link-usuario" aria-label="Iniciar sesión, abre la página de inicio de sesión">
-          <img src="./images/usuarios/Login.png" alt="" class="perfil" aria-hidden="true">
-          <span>INICIAR SESIÓN</span>
+        <!-- LOGO (Izquierda) -->
+        <a href="index.html" class="navbar-brand">
+          <div id="contenedor-logo">
+            <img src="./images/empresa/logo.png" alt="Logo" id="logo">
+          </div>
         </a>
+
+        <!-- CONTENEDOR DERECHO: Usuario y Botón Hamburguesa (ms-auto empuja a la derecha) -->
+        <div class="d-flex align-items-center ms-auto">
+
+          <!-- MENÚ (Se colapsa/despliega por debajo de los elementos anteriores) -->
+          <div class="collapse navbar-collapse" id="menuPrincipal">
+            <!-- Los enlaces ocupan todo el ancho disponible al colapsar -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link link" href="./index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link" href="./servicios.html">SERVICIOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link" href="./mantenimiento.html">OPINIONES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link" href="./contacto.html">CONTACTO</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- USUARIO (Siempre visible, me-3 añade espacio a la derecha) -->
+          <div id="usuario" class="me-3">
+            <a href="./login.html" class="link-usuario">
+              <img src="./images/usuarios/Login.png" alt="Perfil" class="perfil">
+              <!-- El texto solo aparece en pantallas grandes -->
+              <span class="small d-none d-md-inline">INICIAR SESIÓN</span>
+            </a>
+          </div>
+
+          <!-- Botón Hamburguesa (Abre el Offcanvas, solo visible en móvil/tablet) -->
+          <!-- data-bs-target ahora apunta a "#offcanvasMenu" -->
+          <button class="navbar-toggler border-white" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span style="filter: invert(1);">
+              <img src="./images/web/hambueger.png" alt="hamburguesa" width="40" height="40">
+            </span>
+          </button>
+        </div>
+      </div>
+
+      <div class="offcanvas offcanvas-end offcanvas-lg" tabindex="-1" id="offcanvasMenu"
+        aria-labelledby="offcanvasMenuLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasMenuLabel">Navegación</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <!-- navbar-nav y flex-column aseguran que los enlaces se apilan verticalmente en el sidebar -->
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 flex-column">
+            <li class="nav-item">
+              <a class="nav-link link" href="#inicio">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="./servicios.html">SERVICIOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="./mantenimiento.html">OPINIONES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="./contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -67,7 +113,7 @@
         <h1 id="mantenimiento-heading">Estamos en mantenimiento</h1>
         <p>
           Estamos realizando mejoras para ofrecerte una experiencia aún mejor.
-          <br >
+          <br>
           Volveremos a estar disponibles muy pronto.
         </p>
 
@@ -78,77 +124,79 @@
     </main>
 
     <!-- Pie de página -->
-    <footer class="footer" role="contentinfo" aria-label="Pie de página con información de contacto y enlaces legales">
-      <div class="footer-contenido">
-        <section class="footer-soporte" role="region" aria-labelledby="footer-soporte-heading">
-          <h2 id="footer-soporte-heading">¿Necesitas ayuda?</h2>
-          <p>
-            Estamos aquí para resolver tus dudas y acompañarte durante todo el
-            proceso.
-          </p>
+    <!-- La clase 'w-100' asegura que el fondo azul oscuro cubra toda la pantalla -->
+    <footer class="footer bg-dark-custom w-100 py-5 mt-5" role="contentinfo">
 
-          <ul class="footer-contacto" role="list">
-            <li role="listitem">
-              📞 <strong>Teléfono / WhatsApp:</strong>
-              <a href="tel:+34900000000">+34 900 000 000</a>
-            </li>
-            <li role="listitem">
-              📧 <strong>Email:</strong>
-              <a href="mailto:soporte@vendemostucoche.com">soporte@vendemostucoche.com</a>
-            </li>
-            <li role="listitem">🕓 <strong>Horario:</strong> Lunes a viernes, 9:00 – 18:00</li>
-          </ul>
-        </section>
+      <!-- 'container-fluid' permite que el contenido se expanda, px-md-5 da margen interno -->
+      <div class="container-fluid px-4 px-md-5">
+        <div class="row gy-4 align-items-start">
 
-        <!-- Redes sociales -->
-        <section title="Redes Sociales" class="footer-redes" role="region" aria-labelledby="redes-heading">
-          <h2 id="redes-heading">Nuestras Redes sociales</h2>
-          <a
-            href="https://www.facebook.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Facebook"
-            rel="noopener noreferrer"
-          >
-            <img src="./images/icon/Facebook.svg" alt="Facebook" role="img" aria-hidden="true">
-          </a>
-          <a
-            href="https://www.twitter.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Twitter"
-            rel="noopener noreferrer"
-          >
-            <img src="./images/icon/X.svg" alt="Twitter" role="img" aria-hidden="true">
-          </a>
-          <a
-            href="https://www.instagram.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Instagram"
-            rel="noopener noreferrer"
-          >
-            <img src="./images/icon/Instagram.svg" alt="Insta" role="img" aria-hidden="true">
-          </a>
-          <a
-            href="https://www.linkedin.com/company/VendemosTuCoche"
-            target="_blank"
-            aria-label="LinkedIn"
-            rel="noopener noreferrer"
-          >
-            <img src="./images/icon/Linkedin.svg" alt="Linkedin" role="img" aria-hidden="true">
-          </a>
-        </section>
+          <!-- Bloque 1: Soporte -->
+          <section class="col-12 col-md-8" aria-labelledby="footer-soporte-heading">
+            <h3 id="footer-soporte-heading" class="h5 text-white mb-3">¿Necesitas ayuda?</h3>
+            <p class="text-muted-custom mb-4">
+              Estamos aquí para resolver tus dudas y acompañarte durante todo el proceso.
+            </p>
 
-        <section class="footer-info" role="region" aria-labelledby="footer-info-heading">
-          <h2 id="footer-info-heading">© 2025 VendemosTuCoche</h2>
-          <p>Transacciones seguras, rápidas y sin estrés.</p>
-          <nav class="footer-nav" role="navigation" aria-label="Enlaces legales">
-            <a href="aviso-legal.html">Aviso legal</a>
-            <a href="privacidad.html">Privacidad</a>
-            <a href="cookies.html">Cookies</a>
-          </nav>
-        </section>
+            <ul class="list-unstyled footer-contacto" role="list">
+              <li class="mb-2">
+                <span class="me-2">📞</span><strong>Teléfono / WhatsApp:</strong>
+                <a href="tel:+34900000000" class="link-custom ms-1">+34 900 000 000</a>
+              </li>
+              <li class="mb-2">
+                <span class="me-2">📧</span><strong>Email:</strong>
+                <a href="mailto:soporte@vendemostucoche.com" class="link-custom ms-1">soporte@vendemostucoche.com</a>
+              </li>
+              <li class="mb-2"><span class="me-2">🕓</span><strong>Horario:</strong> Lunes a viernes, 9:00 – 18:00</li>
+            </ul>
+          </section>
+
+          <!-- Bloque 2: Redes Sociales -->
+          <section class="col-12 col-md-4 text-md-end" aria-labelledby="redes-heading">
+            <h2 id="redes-heading" class="h6 text-white text-uppercase mb-3">Nuestras Redes</h2>
+            <!-- d-flex justify-content-md-end alinea a la derecha solo en PC -->
+            <div class="d-flex justify-content-start justify-content-md-end gap-3">
+              <a href="#" class="social-icon" aria-label="Facebook">
+                <img src="./images/icon/Facebook.svg" alt="Facebook" width="24" height="24">
+              </a>
+              <a href="#" class="social-icon" aria-label="Twitter">
+                <img src="./images/icon/X.svg" alt="Twitter" width="24" height="24">
+              </a>
+              <a href="#" class="social-icon" aria-label="Instagram">
+                <img src="./images/icon/Instagram.svg" alt="Instagram" width="24" height="24">
+              </a>
+              <a href="#" class="social-icon" aria-label="LinkedIn">
+                <img src="./images/icon/Linkedin.svg" alt="Linkedin" width="24" height="24">
+              </a>
+            </div>
+          </section>
+
+          <!-- Bloque 3: Copyright y Legal (Ancho total) -->
+          <div class="col-12 border-top border-secondary pt-4 mt-5 text-center">
+            <section class="footer-info">
+              <h2 class="h6 fw-bold text-white mb-1">© 2026 VendemosTuCoche</h2>
+              <p class="small text-muted-custom">Transacciones seguras, rápidas y sin estrés.</p>
+              <nav class="d-flex justify-content-center flex-wrap gap-3 mt-3" aria-label="Enlaces legales">
+                <a href="aviso-legal.html" class="link-custom small">Aviso legal</a>
+                <a href="privacidad.html" class="link-custom small">Privacidad</a>
+                <a href="cookies.html" class="link-custom small">Cookies</a>
+              </nav>
+            </section>
+          </div>
+
+        </div>
       </div>
     </footer>
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap 5.3 Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+
     <script src="./js/mantenimiento.js"></script>
   </body>
+
 </html>
