Hacer más grande unos links

--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -177,9 +177,9 @@
               <h2 class="h6 fw-bold text-white mb-1">© 2026 VendemosTuCoche</h2>
               <p class="small text-muted-custom">Transacciones seguras, rápidas y sin estrés.</p>
               <nav class="d-flex justify-content-center flex-wrap gap-3 mt-3" aria-label="Enlaces legales">
-                <a href="aviso-legal.html" class="link-custom small">Aviso legal</a>
-                <a href="privacidad.html" class="link-custom small">Privacidad</a>
-                <a href="cookies.html" class="link-custom small">Cookies</a>
+                <a href="aviso-legal.html" class="link-custom ">Aviso legal</a>
+                <a href="privacidad.html" class="link-custom ">Privacidad</a>
+                <a href="cookies.html" class="link-custom ">Cookies</a>
               </nav>
             </section>
           </div>
