--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -34,7 +34,7 @@
         <!-- LOGO (Izquierda) -->
         <a href="index.html" class="navbar-brand">
           <div id="contenedor-logo">
-            <img src="./images/empresa/logo.png" alt="Logo" id="logo">
+            <img src="./images/empresa/logo.png" alt="LogoEmpresa" id="logo">
           </div>
         </a>
 
