--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -38,6 +38,12 @@
           </div>
         </a>
 
+        <!-- El aria-pressed indica el estado del interruptor a los lectores de pantalla -->
+        <button id="theme-toggle" class="btn btn-outline-info custom-theme-btn" aria-pressed="false"
+          aria-label="Alternar modo oscuro">
+          <span>Modo Oscuro</span>
+        </button>
+
         <!-- CONTENEDOR DERECHO: Usuario y Botón Hamburguesa (ms-auto empuja a la derecha) -->
         <div class="d-flex align-items-center ms-auto">
 
@@ -195,6 +201,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
+
+    <!-- Script para cambiar de tema -->
+    <script src="./js/cambiarColor.js"></script>
 
     <script src="./js/mantenimiento.js"></script>
   </body>
