--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/secciones/index.css">
     <link rel="stylesheet" href="css/responsive/index.css">
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+        t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "v4lcuhc6jb");
+    </script>
   </head>
 
   <body>
