modo oscuro corregido

--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
         </a>
 
         <!-- El aria-pressed indica el estado del interruptor a los lectores de pantalla -->
-        <button id="theme-toggle" class="btn btn-outline-info custom-theme-btn" aria-pressed="false"
+        <button id="theme-toggle" class="btn btn-outline-info custom-theme-btn d-none d-md-block" aria-pressed="false"
           aria-label="Alternar modo oscuro">
           <span>Modo Oscuro</span>
         </button>
