--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -49,7 +49,7 @@
         <!-- El aria-pressed indica el estado del interruptor a los lectores de pantalla -->
         <button id="theme-toggle" class="btn btn-outline-info custom-theme-btn d-none d-md-block" aria-pressed="false"
           aria-label="Alternar modo oscuro">
-          <span>Modo Oscuro</span>
+          <span>Activar modo Oscuro</span>
         </button>
 
         <!-- CONTENEDOR DERECHO: Usuario y Botón Hamburguesa (ms-auto empuja a la derecha) -->
