--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/secciones/index.css">
     <link rel="stylesheet" href="css/responsive/index.css">
 
+    <script src="https://t.contentsquare.net/uxa/be95b47acc61b.js"></script>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
@@ -105,7 +106,7 @@
           <!-- navbar-nav y flex-column aseguran que los enlaces se apilan verticalmente en el sidebar -->
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 flex-column">
             <li class="nav-item">
-              <a class="nav-link link" href="#inicio">INICIO</a>
+              <a class="nav-link link" href="./inicio">INICIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link" href="./servicios.html">SERVICIOS</a>
