--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/secciones/mantenimiento.css">
     <link rel="stylesheet" href="css/print.css" media="print">
 
+    <script src="https://t.contentsquare.net/uxa/be95b47acc61b.js"></script>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
