--- a/servicios.html
+++ b/servicios.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/secciones/servicios.css">
     <link rel="stylesheet" href="css/responsive/servicios.css">
 
+    <script src="https://t.contentsquare.net/uxa/be95b47acc61b.js"></script>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
