Añado analystic o como sea

--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -24,7 +24,11 @@
     <link rel="stylesheet" href="css/secciones/mantenimiento.css">
     <link rel="stylesheet" href="css/print.css" media="print">
 
+    <!-- Analystics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="NmaO1oh4grYfgizHb9Huqw" async></script>
+    <!-- ContentSquare -->
     <script src="https://t.contentsquare.net/uxa/be95b47acc61b.js"></script>
+    <!-- Clarity -->
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
