--- a/servicios.html
+++ b/servicios.html
@@ -24,7 +24,11 @@
     <link rel="stylesheet" href="css/secciones/servicios.css">
     <link rel="stylesheet" href="css/responsive/servicios.css">
 
+    <!-- Analystics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="NmaO1oh4grYfgizHb9Huqw" async></script>
+    <!-- ContentSquare -->
     <script src="https://t.contentsquare.net/uxa/be95b47acc61b.js"></script>
+    <!-- Clarity -->
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
@@ -185,9 +189,10 @@
             <p id="vende-det1-desc">
               Sabemos que un buen anuncio marca la diferencia. Nuestro equipo te
               asesora paso a paso para que tu publicación destaque entre cientos
-              de ofertas. Te ayudamos a elegir las mejores fotos, redactar una
+              de ofertas.
+              <!-- Te ayudamos a elegir las mejores fotos, redactar una
               descripción atractiva y fijar un precio competitivo según el
-              mercado actual.
+              mercado actual. -->
             </p>
           </details>
 
@@ -199,8 +204,8 @@
               una
               <strong>verificación detallada del historial del coche</strong>,
               comprobando kilometraje, mantenimiento, cargas, siniestros y más.
-              Así, los posibles compradores tienen total transparencia y tú
-              vendes con mayor credibilidad.
+              <!-- Así, los posibles compradores tienen total transparencia y tú
+              vendes con mayor credibilidad. -->
             </p>
           </details>
 
@@ -249,9 +254,10 @@
             <p id="compra-det1-desc">
               Cada coche publicado pasa por una revisión técnica completa, donde
               verificamos su estado mecánico, historial de mantenimiento y
-              posibles reparaciones. Además, solo mostramos
+              posibles reparaciones.
+              <!-- Además, solo mostramos
               <strong>fotografías reales y actualizadas</strong>, para que veas
-              exactamente lo que vas a comprar, sin sorpresas.
+              exactamente lo que vas a comprar, sin sorpresas. -->
             </p>
           </details>
 
