--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,29 @@
     principal</a>
 
   <head>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Vendemos Tu Coche",
+        "url": "https://ikerfortes.github.io/Proyecto-diiw.github.io/contacto.html",
+        "logo": "https://ikerfortes.github.io/Proyecto-diiw.github.io/images/empresa/logo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+34-945-XX-XX-XX",
+          "contactType": "customer service",
+          "areaServed": "ES",
+          "availableLanguage": ["Spanish", "Euskera"]
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Introduce aquí tu dirección física, por ejemplo: Calle Imagina, 25",
+          "addressLocality": "Vitoria-Gasteiz",
+          "postalCode": "01001",
+          "addressCountry": "ES"
+        }
+      }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Iker Fortes">
