--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     principal</a>
 
   <head>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Vendemos Tu Coche",
+        "url": "https://ikerfortes.github.io/Proyecto-diiw.github.io/index.html",
+        "logo": "https://ikerfortes.github.io/Proyecto-diiw.github.io/images/empresa/logo.png",
+        "description": "Plataforma innovadora dedicada a la compra y venta de coches de segunda mano de forma rápida, segura y transparente.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Vitoria-Gasteiz",
+          "addressCountry": "ES"
+        },
+        "sameAs": [
+          "https://facebook.com",
+          "https://twitter.com",
+          "https://instagram.com"
+        ]
+      }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Iker Fortes">
@@ -572,6 +592,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
+
 
   </body>
 
