--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -5,6 +5,16 @@
     principal</a>
 
   <head>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Vendemos Tu Coche",
+        "url": "https://tuweb.com",
+        "logo": "https://tuweb.com",
+        "description": "Sitio web temporalmente en mantenimiento. Volveremos a estar disponibles muy pronto."
+      }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Iker Fortes">
