--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "AutoBroker",
+        "@type": "LocalBusiness",
         "name": "Vendemos Tu Coche",
         "description": "Plataforma estilo Vinted para la compra y venta de vehículos de forma rápida, segura y transparente.",
         "url": "https://ikerfortes.github.io/Proyecto-diiw.github.io/servicios.html",
